--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </style>
 <body>
 <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
-<script src="http://d3js.org/queue.v1.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="https://d3js.org/queue.v1.min.js"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
 <script>
     /**
      * copied from the following resources:
